# pri_loguru

./: LICENSE  README.md  __init__.py  handler.py  pyproject.toml
pri_loguru/: __init__.py  conf.py  handler.py
