[tool.poetry]
name = "pri-loguru"
version = "0.1.1a2"
description = ""
authors = ["lnk2005 <wza82877638@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
elasticsearch = "8.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
